# RAG_DTU

./: .gitignore  README.txt  all_courses_info.json  config.py  merging_json_files.py  pyproject.toml  requirements.txt  scraping_course.py  scraping_programmes.py  text_normalization.py
app/: chat_ratings.csv  main_page.py
data/: all_courses_info.json  danish_courses.json  exam_schedule_dtu.json  merged_programmes.json  processed_programmes.json  programme_embeddings.json  reference_data.json  summarized_programmes.json
data_courses/: 01238.json  01257.json  01405.json  01410.json  01621.json  01622.json  01716.json  02162.json  02180.json  02196.json  02205.json  02214.json  02226.json  02232.json  02233.json  02242.json  02247.json  02255.json  02263.json  02266.json  02282.json  02291.json  02407.json  02411.json  02418.json  02421.json  02425.json  02429.json  02441.json  02455.json  02471.json  02477.json  02501.json  02502.json  02509.json  02516.json  02517.json  02561.json  02563.json  02566.json  (+302 more)
data_study_programmes/: Applied_Chemistry.json  Architectural_Engineering.json  Autonomous_Systems.json  Bioinformatics_and_Systems_Biology.json  Biomaterial_Engineering_for_Medicine.json  Biomedical_Engineering.json  Biotechnology.json  Business_Analytics.json  Chemical_and_Biochemical_Engineering.json  Civil_Engineering.json  Communication_Technologies_and_System_Design.json  Computer_Science_and_Engineering.json  Design_and_Innovation.json  Earth_and_Space_Physics_and_Engineering.json  Electrical_Engineering.json  Engineering_Acoustics.json  Engineering_Light.json  (+16 more)
(+1260 files in other folders)
