[project]
name = "rag_dtu"
version = "0.1.0"
description = "RAG assistant for DTU course queries"
authors = [
  { name = "Lorenzo Cazzador" },
  { name = "Manuel Lovo" },
  { name = "Rasmus Soendergaard" },
  { name = "Manuel Ibanez" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
